--- a/POS_APP/Admin/CategoryScreen.xaml
+++ b/POS_APP/Admin/CategoryScreen.xaml
@@ -10,13 +10,14 @@
         xmlns:rowcon="clr-namespace:POS_APP.Helper" 
         xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
         mc:Ignorable="d"
-        Title="Category" Loaded="Window_Loaded"  WindowState="Maximized" Height="450" Width="800">
+        Title="Category" Loaded="Window_Loaded" WindowState="Maximized" Height="450" Width="800">
     <controls:MetroWindow.RightWindowCommands>
         <controls:WindowCommands Style="{StaticResource MahApps.Styles.Control.WindowCommands}">
             <Menu Name="mymenu" VerticalAlignment="Top" Margin="0,-8,0,0">
                 <MenuItem Name="mnPos" Header="POS" FontSize="13" VerticalAlignment="Top" Icon="{iconPacks:FontAwesome Kind=DesktopSolid}" Click="mnPos_Click">
                 </MenuItem>
-                <MenuItem Name="mnProduct" Header="Add Product" Icon="{iconPacks:FontAwesome Kind=ProductHuntBrands}" Click="mnProduct_Click"/>
+                <MenuItem Name="mnProduct" Header="Add Item" Icon="{iconPacks:FontAwesome Kind=ProductHuntBrands}" Click="mnProduct_Click"/>
+                <MenuItem Name="mnSetting" Header="Settings" Icon="{iconPacks:FontAwesome Kind=CogSolid}" Click="mnSetting_Click"/>
             </Menu>
         </controls:WindowCommands>
     </controls:MetroWindow.RightWindowCommands>
@@ -51,7 +52,7 @@
             <StackPanel Orientation="Vertical">
                 <TextBlock Text="View Category" FontSize="16" FontWeight="Bold" Margin="0,0,0,2"></TextBlock>
                 <Separator BorderThickness="0.1"></Separator>
-                <DataGrid Name="gridCategory" CanUserDeleteRows="False" CanUserReorderColumns="False" CanUserAddRows="False" AutoGenerateColumns="False" Margin="0,10,0,0">
+                <DataGrid Name="gridCategory" MaxHeight="420" CanUserDeleteRows="False" CanUserReorderColumns="False" CanUserAddRows="False" AutoGenerateColumns="False" Margin="0,10,0,0">
                     <DataGrid.Columns>
                         <DataGridTextColumn CellStyle="{StaticResource MahApps.Styles.DataGridCell}" HeaderStyle="{StaticResource MahApps.Styles.DataGridColumnHeader}" IsReadOnly="True"  Header="# SL No." Binding="{Binding RelativeSource={RelativeSource AncestorType=DataGridRow}, Converter={rowcon:RowToIndexConverter}}" />
                         <DataGridTextColumn CellStyle="{StaticResource MahApps.Styles.DataGridCell}" HeaderStyle="{StaticResource MahApps.Styles.DataGridColumnHeader}" IsReadOnly="True" Header="Name" Binding="{Binding Name}"></DataGridTextColumn>
@@ -61,8 +62,8 @@
                                     <Button
                             x:Name="btnEdit"
                             Width="75"
+                            Margin="2,4,2,4"
                             Height="Auto"
-                            Margin="10"
                             Click="btnEdit_Click" ToolTip="EDIT" Style="{DynamicResource MahApps.Styles.Button.MetroSquare}">
                                         <iconPacks:PackIconEntypo Kind="Edit" />
                                     </Button>
@@ -76,7 +77,7 @@
                             x:Name="btnDelete"
                             Width="75"
                             Height="Auto"
-                            Margin="10"
+                            Margin="2,4,2,4"
                             ToolTip="DELETE" Click="btnDelete_Click" Style="{DynamicResource MahApps.Styles.Button.MetroSquare}">
                                         <iconPacks:PackIconEntypo Kind="Eraser" />
                                     </Button>
