--- a/POS_APP/App.xaml
+++ b/POS_APP/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:POS_APP"
-             StartupUri="Client/PosWindow.xaml">
+             StartupUri="Admin/Settings.xaml">
     <Application.Resources>
         <ResourceDictionary>
 
